5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4157/executions/1674_1103.log
== SUBMITION (2019-05-02 00:04:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Entrada x:"))
a = float(input("Etranda a:"))
b = float(input("Entrada b:"))
if(b>a): 
	if(x>=a) and (x<=b):
		print(x,"pertence ao intervalo",a",",b)
	else:
		print(x, "nao pertence ao intervalo",a",",b)
else:
	print("Entradas", a",",b, "invalidas")
-- EXECUTION TIME:
0.147625
-- ERROR:
  File "/home/codebench/codes/1674/1103/main.py", line 9
    print(x,"pertence ao intervalo",a",",b)
                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:10:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Entrada x:"))
a = float(input("Etranda a:"))
b = float(input("Entrada b:"))
if(b>a): 
	if(x>=a) and (x<=b):
		print(x,"pertence ao intervalo",a",",b)
	else:
		print(x, "nao pertence ao intervalo",a",",b)
else:
	print("Entradas", a"e",b, "invalidas")
-- EXECUTION TIME:
0.144874
-- ERROR:
  File "/home/codebench/codes/1674/1103/main.py", line 9
    print(x,"pertence ao intervalo",a",",b)
                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:10:58) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Entrada x:"))
a = float(input("Etranda a:"))
b = float(input("Entrada b:"))
if(b>a): 
	if(x>=a) and (x<=b):
		print(x,"pertence ao intervalo",a",",b)
	else:
		print(x, "nao pertence ao intervalo",a",",b)
else:
	print("Entradas", a,"e",b, "invalidas")
-- EXECUTION TIME:
0.184815
-- ERROR:
  File "/home/codebench/codes/1674/1103/main.py", line 9
    print(x,"pertence ao intervalo",a",",b)
                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:11:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Entrada x:"))
a = float(input("Etranda a:"))
b = float(input("Entrada b:"))
if(b>a): 
	if(x>=a) and (x<=b):
		print(x,"pertence ao intervalo", a",", b)
	else:
		print(x, "nao pertence ao intervalo", a",", b)
else:
	print("Entradas", a,"e", b, "invalidas")
-- EXECUTION TIME:
0.192805
-- ERROR:
  File "/home/codebench/codes/1674/1103/main.py", line 9
    print(x,"pertence ao intervalo", a",", b)
                                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:12:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Entrada x:"))
a = float(input("Etranda a:"))
b = float(input("Entrada b:"))
if(b>a): 
	if(x>=a) and (x<=b):
		print(x,"pertence ao intervalo", a",", b)
	else:
		print(x, "nao pertence ao intervalo", a",", b)
else:
	print("Entradas", a, "e", b, "invalidas")
-- EXECUTION TIME:
0.167594
-- ERROR:
  File "/home/codebench/codes/1674/1103/main.py", line 9
    print(x,"pertence ao intervalo", a",", b)
                                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 00:12:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("Entrada x:"))
a = float(input("Etranda a:"))
b = float(input("Entrada b:"))
if(b>a): 
	if(x>=a) and (x<=b):
		print(x,"pertence ao intervalo", a,",", b)
	else:
		print(x, "nao pertence ao intervalo", a,",", b)
else:
	print("Entradas", a, "e", b, "invalidas")
-- EXECUTION TIME:
0.172073
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
